[gd_scene load_steps=10 format=2]

[ext_resource path="res://Characters/Enemy/warrok/warrok.gd" type="Script" id=1]
[ext_resource path="res://Characters/Enemy/warrok/area_closeAttack.gd" type="Script" id=2]
[ext_resource path="res://Characters/Enemy/warrok/warrok.dae" type="PackedScene" id=3]
[ext_resource path="res://Characters/Enemy/warrok/warrok_MAT.material" type="Material" id=4]
[ext_resource path="res://Characters/Enemy/warrok/AnimationPlayer.gd" type="Script" id=5]
[ext_resource path="res://UI/HealthBar3D.tscn" type="PackedScene" id=6]

[sub_resource type="CylinderShape" id=1]
height = 1.58652

[sub_resource type="CylinderShape" id=2]
radius = 1.86454
height = 2.30829

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 1, 0.498959 )

[node name="Warrok" type="KinematicBody"]
transform = Transform( -1, 0, 8.74228e-008, 0, 1, 0, -8.74228e-008, 0, -1, 0, 0, 0 )
collision_layer = 1024
collision_mask = 1025
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.845573, 0 )
shape = SubResource( 1 )

[node name="area_closeDetect" type="Area" parent="."]
collision_layer = 2048
collision_mask = 32

[node name="CollisionShape" type="CollisionShape" parent="area_closeDetect"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06041, 0 )
shape = SubResource( 2 )

[node name="area_closeAttack" type="Area" parent="."]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="area_closeAttack"]
transform = Transform( 0.391318, 0, 1.16904e-007, 0, 0.304218, 0, 1.16904e-007, 0, 1.72855, 0.0102168, 1.17075, 0.883068 )
shape = SubResource( 3 )

[node name="timer_firstDelay" type="Timer" parent="."]

[node name="timer_closeAttack" type="Timer" parent="."]
wait_time = 2.12

[node name="timer_attackFinish" type="Timer" parent="."]

[node name="Graphics" parent="." instance=ExtResource( 3 )]

[node name="Warrok" parent="Graphics/Skeleton" index="0"]
material/0 = ExtResource( 4 )

[node name="AnimationPlayer" parent="Graphics" index="1"]
script = ExtResource( 5 )

[node name="HealthBar3D" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.2, 0 )
[connection signal="body_entered" from="area_closeDetect" to="." method="_on_area_closeDetect_body_entered"]
[connection signal="body_exited" from="area_closeDetect" to="." method="_on_area_closeDetect_body_exited"]
[connection signal="body_entered" from="area_closeAttack" to="area_closeAttack" method="_on_area_closeAttack_body_entered"]
[connection signal="timeout" from="timer_firstDelay" to="." method="_on_timer_firstDelay_timeout"]
[connection signal="timeout" from="timer_closeAttack" to="." method="_on_timer_closeAttack_timeout"]
[connection signal="timeout" from="timer_attackFinish" to="." method="_on_timer_attackFinish_timeout"]
[connection signal="animation_finished" from="Graphics/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Graphics"]
